# nestfast

./: .env-example  Makefile  docker-compose.yml  script.bat
backend/: Dockerfile  app.db  pyproject.toml
backend/app/: dependencies.py  main.py
backend/app/api/v1/: __init__.py  auth.py  routines.py  workouts.py
backend/app/db/: __init__.py  database.py
backend/app/models/: __init__.py  models.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.js  page.js  test-page.js
frontend/src/app/components/: ProtectedRoute.js
frontend/src/app/context/: AuthContext.js
frontend/src/app/login/: page.js
