[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=4.0.1",
    "fastapi[standard]>=0.115.11",
    "passlib>=1.7.4",
    "python-jose[cryptography]>=3.4.0",
    "sentry-sdk[fastapi]>=2.24.1",
    "sqlalchemy>=2.0.39",
]

[dependency-groups]
dev = ["pytest>=8.3.5", "ruff>=0.10.0"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG001", # unused arguments in functions
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "W191", # indentation contains tabs
    "B904", # Allow raising exceptions without from e, for HTTPException
]
